[Feature] connect to mysql (write2mysql.ipynb) & ploty (main.ipynb)

--- a/Backtrader/Untitled.ipynb
+++ b/Backtrader/Untitled.ipynb
@@ -28211,9 +28211,7 @@
   {
    "cell_type": "markdown",
    "id": "189c431d-0718-4a02-bd0d-9355a262f297",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 第四篇 交易篇（下）\n"
    ]
@@ -28221,9 +28219,7 @@
   {
    "cell_type": "markdown",
    "id": "0cca891a-bb49-4567-8488-eb01c2c83f2f",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 4.1 Order 中的交易订单\n",
     "\n",
@@ -28298,6 +28294,53 @@
     "    止损价会发生变动，变动逻辑与上面介绍的跟踪止损订单一致；\n",
     "    \n",
     "    例：self.buy(exectype=bt.Order.StopTrailLimit, plimit=xxx, trailamount=xxx) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0534abb4-8d8f-417c-b5b3-ba521371e4b9",
+   "metadata": {},
+   "source": [
+    "止损单是一种重要的风险管理工具，它可以帮助投资者在交易中限制潜在的损失。以下是一些具体的示例，说明不同类型的止损单如何在实际交易中使用：\n",
+    "\n",
+    "止损市价单（Stop Market Order）：\n",
+    "假设你持有一支股票，当前价格为\n",
+    "50\n",
+    "，你不希望损失超过\n",
+    "50，你不希望损失超过2。你可以设置一个止损市价单，触发价格为\n",
+    "48\n",
+    "。如果股票价格下跌到\n",
+    "48。如果股票价格下跌到48或更低，你的订单将被触发，并以当前市场上可获得的最佳价格执行卖出。这可能是\n",
+    "48\n",
+    "，也可能是\n",
+    "48，也可能是47.50，具体取决于市场的流动性和交易时的市场状况。\n",
+    "\n",
+    "止损限价单（Stop Limit Order）：\n",
+    "继续上述情况，如果你想要更精确地控制卖出价格，你可以设置一个止损限价单，触发价格为\n",
+    "48\n",
+    "，限价为\n",
+    "48，限价为47.50。这意味着只有当股票价格下跌到\n",
+    "48\n",
+    "时，你的订单才会变成一个限价单，以\n",
+    "48时，你的订单才会变成一个限价单，以47.50或更高的价格卖出。这种订单可以提供更好的价格控制，但如果市场快速下跌，可能无法成交。\n",
+    "\n",
+    "跟踪止损单（Trailing Stop Order）：\n",
+    "如果你的股票价格上涨到了\n",
+    "60\n",
+    "，你希望锁定利润，同时给予价格一定的上涨空间，你可以设置一个跟踪止损单，比如设定跟踪价差为\n",
+    "60，你希望锁定利润，同时给予价格一定的上涨空间，你可以设置一个跟踪止损单，比如设定跟踪价差为2。如果股票价格继续上涨到\n",
+    "62\n",
+    "，你的止损价格会自动调整到\n",
+    "62，你的止损价格会自动调整到60。如果价格随后下跌到$58，你的订单将被触发，并以市价卖出。\n",
+    "\n",
+    "一取消全（One-Cancels-All, OCA）订单：\n",
+    "假设你同时持有多头和空头两个头寸，并且希望同时设置止盈和止损。你可以创建一个OCA组，包含一个止盈市价单和一个止损市价单。如果任何一个订单成交，另一个订单将自动取消。这确保了你不会同时获得利润和损失。\n",
+    "\n",
+    "触及市价单（Market if Touched, MIT）：\n",
+    "如果你认为某个资产的价格将在达到某个特定水平后发生显著变动，你可以设置一个MIT订单。例如，如果你认为一支股票在突破\n",
+    "100\n",
+    "的阻力位后会大幅上涨，你可以设置一个触发价格为\n",
+    "100的阻力位后会大幅上涨，你可以设置一个触发价格为100的MIT订单。一旦股票价格达到$100，你的订单将以市价买入，尝试捕捉上涨趋势。"
    ]
   },
   {
@@ -41766,7 +41809,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
